manifests/home-assistant/resources/service-auth.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: auth
  namespace: home-assistant
spec:
  type: ExternalName
  externalName: authentik-server.authentik.svc.cluster.local
