manifests/home-assistant/resources/victoria-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/auth-url: |-
      http://authentik-server.authentik.svc.cluster.local:80/outpost.goauthentik.io/auth/nginx
    ingress.kubernetes.io/auth-signin: |-
      https://${victoria_hostname}/outpost.goauthentik.io/start?rd=$scheme://$http_host$escaped_request_uri
    ingress.kubernetes.io/auth-response-headers: |-
      Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid
    ingress.kubernetes.io/auth-snippet: |
      proxy_set_header X-Forwarded-Host $http_host;
  name: victoria
  namespace: home-assistant
spec:
  ingressClassName: haproxy
  rules:
  - host: ${victoria_hostname}
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: victoria
            port:
              number: 8428
      - path: /outpost.goauthentik.io
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth
            port:
              number: 80
  tls:
  - hosts:
    - ${victoria_hostname}
    secretName: victoria-tls
